tests/rosetta/transpiler/Racket/adfgvx-cipher.error
run error: exit status 1
string-append: contract violation
  expected: string?
  given: '("X")
  context...:
   /workspace/mochi/tests/rosetta/transpiler/Racket/adfgvx-cipher.rkt:162:4
   /workspace/mochi/tests/rosetta/transpiler/Racket/adfgvx-cipher.rkt:159:4
   /workspace/mochi/tests/rosetta/transpiler/Racket/adfgvx-cipher.rkt:156:0
   /workspace/mochi/tests/rosetta/transpiler/Racket/adfgvx-cipher.rkt:146:2
   /workspace/mochi/tests/rosetta/transpiler/Racket/adfgvx-cipher.rkt:343:2
   body of "/workspace/mochi/tests/rosetta/transpiler/Racket/adfgvx-cipher.rkt"
6 x 6 Polybius square:

  | A D F G V X
---------------
A | M N J F 6 B 
D | O 5 L X G W 
F | 7 E 1 R 8 H 
G | V Q I D P U 
V | 2 Z K 9 0 Y 
X | S 4 C 3 T A 

The key is L5A3YCSXJ

Plaintext : ATTACKAT1200AM
